base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE_NAME}
  labels:
    app: ${SERVICE_NAME}
    tier: backend
  annotations:
    # prometheus.io/scrape: "true"
spec:
  selector:
    app: ${SERVICE_NAME}
    tier: backend
    track: stable
  ports:
    - name: http
      port: 80
      targetPort: http-container
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE_NAME}-mesh
  labels:
    app: ${SERVICE_NAME}
    tier: backend
  annotations:
    # prometheus.io/scrape: "true"
spec:
  selector:
    app: ${SERVICE_NAME}
    tier: backend
  ports:
    - name: http
      port: 80
      targetPort: http-container
      protocol: TCP
  type: ClusterIP
